{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 201,
  "lineage": "77ebb6f0-5536-8cea-05fd-e1f4a024d14c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "espm_backend_alb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/espm-backend-alb-tg/66771ae9f3a8f8c2",
            "arn_suffix": "targetgroup/espm-backend-alb-tg/66771ae9f3a8f8c2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/espm-backend-alb-tg/66771ae9f3a8f8c2",
            "lambda_multi_value_headers_enabled": false,
            "name": "espm-backend-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "espm_web_alb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/espm-web-alb-tg/9096baad810d5b96",
            "arn_suffix": "targetgroup/espm-web-alb-tg/9096baad810d5b96",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/espm-web-alb-tg/9096baad810d5b96",
            "lambda_multi_value_headers_enabled": false,
            "name": "espm-web-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "espm_eip_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-8a1bc950",
            "domain": "vpc",
            "id": "eipalloc-057c616cb1e733220",
            "network_interface": "eni-0d9898161da3f761e",
            "private_dns": "ip-10-0-2-131.ap-south-1.compute.internal",
            "private_ip": "10.0.2.131",
            "public_dns": "ec2-15-206-162-184.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.162.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:638987496525:instance/i-0edf8c1d7ae4bd281",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0edf8c1d7ae4bd281",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "karthik_ssh_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0acd5893bc38e3707",
            "private_dns": "ip-10-0-1-82.ap-south-1.compute.internal",
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-13-233-207-207.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.207.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09fc9be3e15bda19f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-018817fd27921dd57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd74ff4df0b9e67",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018817fd27921dd57"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion-sg",
            "aws_subnet.espm_pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "espm_IG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e107039b1f531ede",
            "owner_id": "638987496525",
            "tags": {
              "Name": "espm_IG"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "espm_app_backend_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/espm-app-lb/667596d39e1822a5",
            "arn_suffix": "app/espm-app-lb/667596d39e1822a5",
            "dns_name": "internal-espm-app-lb-1565058514.ap-south-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/espm-app-lb/667596d39e1822a5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "espm-app-lb",
            "security_groups": [
              "sg-0167ba0dcc0311233"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04648e0e8a9dacb34"
              },
              {
                "subnet_id": "subnet-076b682d39d8d0787"
              }
            ],
            "subnets": [
              "subnet-04648e0e8a9dacb34",
              "subnet-076b682d39d8d0787"
            ],
            "tags": {
              "Name": "INTERNAL-ALB"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_security_group.espm_sg_backend_lb",
            "aws_security_group.espm_sg_web_lb",
            "aws_subnet.espm_pri_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "espm_web_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/espm-web-lb/8ca146e98a7ad6d7",
            "arn_suffix": "app/espm-web-lb/8ca146e98a7ad6d7",
            "dns_name": "espm-web-lb-1183125792.ap-south-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/espm-web-lb/8ca146e98a7ad6d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "espm-web-lb",
            "security_groups": [
              "sg-0a0cbd489b4a3ee2c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08bd74ff4df0b9e67"
              },
              {
                "subnet_id": "subnet-0f20de6bd03b44c2e"
              }
            ],
            "subnets": [
              "subnet-08bd74ff4df0b9e67",
              "subnet-0f20de6bd03b44c2e"
            ],
            "tags": {
              "Name": "EXTERNAL-ALB"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_security_group.espm_sg_web_lb",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backed_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:listener/app/espm-app-lb/667596d39e1822a5/9aab695428cdcfbd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/espm-backend-alb-tg/66771ae9f3a8f8c2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:listener/app/espm-app-lb/667596d39e1822a5/9aab695428cdcfbd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/espm-app-lb/667596d39e1822a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.espm_backend_alb_tg",
            "aws_internet_gateway.espm_IG",
            "aws_lb.espm_app_backend_lb",
            "aws_security_group.espm_sg_backend_lb",
            "aws_security_group.espm_sg_web_lb",
            "aws_subnet.espm_pri_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:listener/app/espm-web-lb/8ca146e98a7ad6d7/4d9307ef54375fc3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/espm-web-alb-tg/9096baad810d5b96",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:listener/app/espm-web-lb/8ca146e98a7ad6d7/4d9307ef54375fc3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/espm-web-lb/8ca146e98a7ad6d7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.espm_web_alb_tg",
            "aws_internet_gateway.espm_IG",
            "aws_lb.espm_web_lb",
            "aws_security_group.espm_sg_web_lb",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "espm_nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057c616cb1e733220",
            "id": "nat-080c4ac7485bebe38",
            "network_interface_id": "eni-0d9898161da3f761e",
            "private_ip": "10.0.2.131",
            "public_ip": "15.206.162.184",
            "subnet_id": "subnet-0f20de6bd03b44c2e"
          },
          "dependencies": [
            "aws_eip.espm_eip_nat",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "espm_pri_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00cedeca56c9b9f4a",
            "owner_id": "638987496525",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-080c4ac7485bebe38",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "espm_pri_route_table"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_eip.espm_eip_nat",
            "aws_nat_gateway.espm_nat_gw",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "espm_pub_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-011bf55e58a83dc32",
            "owner_id": "638987496525",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e107039b1f531ede",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "espm_pub_route_table"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "espm_pri_route_associate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022df1761512bd1fb",
            "route_table_id": "rtb-00cedeca56c9b9f4a",
            "subnet_id": "subnet-076b682d39d8d0787"
          },
          "dependencies": [
            "aws_eip.espm_eip_nat",
            "aws_nat_gateway.espm_nat_gw",
            "aws_route_table.espm_pri_route_table",
            "aws_subnet.espm_pri_subnet",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037fa49e1ea55219a",
            "route_table_id": "rtb-00cedeca56c9b9f4a",
            "subnet_id": "subnet-04648e0e8a9dacb34"
          },
          "dependencies": [
            "aws_eip.espm_eip_nat",
            "aws_nat_gateway.espm_nat_gw",
            "aws_route_table.espm_pri_route_table",
            "aws_subnet.espm_pri_subnet",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "espm_pub_route_associate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0871f42c6dd539fd2",
            "route_table_id": "rtb-011bf55e58a83dc32",
            "subnet_id": "subnet-08bd74ff4df0b9e67"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_route_table.espm_pub_route_table",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057963bfc11341151",
            "route_table_id": "rtb-011bf55e58a83dc32",
            "subnet_id": "subnet-0f20de6bd03b44c2e"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_route_table.espm_pub_route_table",
            "aws_subnet.espm_pub_subnet",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-018817fd27921dd57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018817fd27921dd57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-security-group",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "espm_backend_asg_config_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-0cdd2e4f4c98a630c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdd2e4f4c98a630c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018817fd27921dd57"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0167ba0dcc0311233"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "espm_backend_asg_config_sg",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.espm_sg_backend_lb",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "espm_fronted_asg_config_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-07acbacf0a070ca1c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07acbacf0a070ca1c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018817fd27921dd57"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0cbd489b4a3ee2c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "espm_fronted_asg_config_sg",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.espm_sg_web_lb",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "espm_sg_backend_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-0167ba0dcc0311233",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0167ba0dcc0311233",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0cbd489b4a3ee2c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "espm_sg_backend_lb",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_security_group.espm_sg_web_lb",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "espm_sg_web_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-0a0cbd489b4a3ee2c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a0cbd489b4a3ee2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "espm_sg_web_lb",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_internet_gateway.espm_IG",
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "espm_pri_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-076b682d39d8d0787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-076b682d39d8d0787",
            "map_public_ip_on_launch": false,
            "owner_id": "638987496525",
            "tags": {
              "Name": "espm_pri_subnet_0"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-04648e0e8a9dacb34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04648e0e8a9dacb34",
            "map_public_ip_on_launch": false,
            "owner_id": "638987496525",
            "tags": {
              "Name": "espm_pri_subnet_1"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "espm_pub_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-08bd74ff4df0b9e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08bd74ff4df0b9e67",
            "map_public_ip_on_launch": true,
            "owner_id": "638987496525",
            "tags": {
              "Name": "espm_pub_subnet_0"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-0f20de6bd03b44c2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f20de6bd03b44c2e",
            "map_public_ip_on_launch": true,
            "owner_id": "638987496525",
            "tags": {
              "Name": "espm_pub_subnet_1"
            },
            "vpc_id": "vpc-079ea5eb0ddf703ad"
          },
          "dependencies": [
            "aws_vpc.espm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "espm_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:vpc/vpc-079ea5eb0ddf703ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006140bec742e7caa",
            "default_route_table_id": "rtb-09e390e2f890a7851",
            "default_security_group_id": "sg-0d618a9b87bd4a001",
            "dhcp_options_id": "dopt-a640aacd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-079ea5eb0ddf703ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09e390e2f890a7851",
            "owner_id": "638987496525",
            "tags": {
              "Name": "espm_vpc"
            }
          }
        }
      ]
    }
  ]
}